[tool.poetry]
name = "generation-of-python"
version = "0.1.0"
description = ""
authors = ["VladMerk <merkvladimir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "W291 E128 E122"

[tool.pytest.ini_options]
addopts = "-sv -p no:cacheprovider --cov=. --cov-report html"
testpaths = ["tests"]

[tool.isort]
line_length = 120
multi_line_output = 3
